fixed spacing in temporary projects page

--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,9 @@ nav a {
   font-family: 'Droid Sans', sans-serif;
 }
 
+.project-space {
+  padding-bottom: 1.5em !important;
+}
 .projects-title {
   text-align: center;
   margin-bottom: 30px;
